# SnakeEngine

./: .gitignore  README.md  pyproject.toml
src/snakeengine/: Engine.py
src/snakeengine/core/: EventHandler.py
src/snakeengine/core/enums/: GameDimension.py
src/snakeengine/game/: Game.py
